# VastPlan

./: .gitignore  .golangci.yml  .graphifyignore  .npmrc  AGENTS.md  NOTICE  README.md  TODOS.md  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.githooks/: commit-msg
arch/: arch_test.go  compatibility_test.go  design_test.go  plugin_namespace_test.go
deploy/: application-composition.json  cluster.deployment.json  portal-application-composition.json  portal-platform-profile.json
e2e/: cluster_policy_test.go  dispatch_test.go  node_reconcile_test.go  plugin_lifecycle_test.go  portal_edge_test.go  python_plugin_test.go  soak_test.go
extensions/sdk/python/: README.md  pyproject.toml  requirements.txt
extensions/sdk/python/contract/v1/: contract_pb2.py
extensions/sdk/python/pluginhost/v1/: pluginhost_pb2.py
extensions/sdk/python/tests/: test_configuration_sdk.py  test_sdk.py  test_shared_state.py  test_subinterpreter_sdk.py
extensions/sdk/python/vastplan_plugin/: __init__.py  context.py  credential.py  plugin.py  scoped_configuration.py  shared_state.py
extensions/sdk/python/vastplan_subinterpreter/: __init__.py  plugin.py
sdk/python/: README.md  pyproject.toml
sdk/python/contract/: __init__.py
sdk/python/contract/v1/: __init__.py  contract_pb2.py
sdk/python/pluginhost/: __init__.py
sdk/python/pluginhost/v1/: __init__.py  pluginhost_pb2.py  pluginhost_pb2_grpc.py
tools/: benchmark.sh  build-dynamic-go.sh  build.sh  gen-proto.sh  setup-hooks.sh  test.sh  verify-release.sh  verify-reproducible-build.sh
(+2091 files in other folders)
