[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vastplan-plugin-sdk"
version = "0.1.0"
description = "VastPlan first-party Python plugin SDK"
requires-python = ">=3.8"
dependencies = [
  "grpcio==1.70.0",
  "protobuf==4.25.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vastplan_plugin*", "contract*", "pluginhost*"]
